# tax_calc

./: .dockerignore  .env.prod  .env.sample  Dockerfile  docker-compose.yml  env.sample  pyproject.toml  run.sh
apps/accounts/: admin.py  apps.py  backends.py  forms.py  models.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_table.py  0003_user_is_staff.py  0004_alter_user_table.py  0005_alter_user_table.py
apps/countries/: models.py  urls.py  views.py
apps/countries/migrations/: 0001_initial.py
apps/taxes/: urls.py  views.py
apps/transactions/: models.py  tests.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
static/base/css/: dashboard.css  signin.css
templates/: base.html  base_accounts.html  index.html
templates/accounts/: account_activation_email.html  change_password.html  login.html  logout.html  password_reset_confirm.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  profile.html  register.html
templates/common/: field_errors.html  navbar.html  pagination.html  sidebar.html  toolbar.html  transactions_table.html
templates/taxes/: transfer.html
templates/transaction/: list.html  upload.html
