[tool.poetry]
name = "TAX Calculator"
version = "0.1.0"
description = ""
authors = ["Aleksandr <amvorobei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
python-decouple = "^3.6"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
